first attempt at parsing templates